--- a/src/components/order-bid-history/style.scss
+++ b/src/components/order-bid-history/style.scss
@@ -60,9 +60,10 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 1.2rem 0;
+      padding: 1.2rem 1rem;
       border-bottom: 1px solid #e7e7e9;
-      margin: 0 2rem;
+      margin: 0 1rem;
+      border-radius: 0.5rem;
 
       .first-half {
         display: flex;
@@ -103,8 +104,8 @@
         }
 
         .bid-owner {
-          font-size: 1.5rem;
-          font-family: $neue-helveticabold;
+          font-size: 1.15rem;
+          font-family: $neue-helveticamedium;
 
           .owner-id {
             cursor: pointer;
@@ -140,7 +141,9 @@
           text-decoration: none;
           display: none;
           @media screen and (max-width: 767px) {
-            margin: 1px 0rem;
+            margin: 0.5rem 0rem;
+            font-size: 0.8rem;
+            padding: 0.2rem 1rem;
           }
         }
       }
